# image2slides

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  package.json  pyproject.toml
.codex-plugin/: plugin.json
agents/: openai.yaml
docs/: index.html  styles.css
examples/: spec.example.json
hooks/: image2slides-native-hook.mjs
how2reinforce/: README.md  raw.txt  spec.json
how2reinforce/image2slides_run/: project.json
how2reinforce/image2slides_run/analysis/: manifest.json  slide_01.json  slide_02.json  slide_03.json  slide_04.json  slide_05.json  slide_06.json  slide_07.json  slide_08.json  slide_09.json  slide_10.json  slide_11.json  slide_12.json  slide_13.json  slide_14.json  slide_15.json
how2reinforce/image2slides_run/background/: .image2slides_background_provenance.json
how2reinforce/image2slides_run/completed/: .image2slides_completed_provenance.json
how2reinforce/image2slides_run/prompts/: background_edit_prompts.jsonl  completed_prompts.jsonl
how2reinforce/image2slides_run/reports/: background_audit.json  background_audit.md  internal_text_lint.json  qa_report.md  qa_similarity.json  source_layer_audit.json
how2reinforce/image2slides_run/wiki/: 00_project_brief.md  01_wiki_map.md  02_content_boundary.md  03_source_registry.yml  04_slide_plan.json
howitworks/: README.md  howitworks.docx  spec.json
howitworks/image2slides_run/: project.json
howitworks/image2slides_run/analysis/: manifest.json  slide_01.json  slide_02.json  slide_03.json  slide_04.json  slide_05.json
skills/image2slides/: SKILL.md
tests/: test_image2slides.py
(+22 files in other folders)
