[project]
name = "image2slides"
version = "1.0.1"
description = "Codex plugin for image-generated slide comps and editable PowerPoint output"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
api = [
  "openai>=1.0.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
image2slides = "image2slides:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["image2slides"]

[tool.setuptools.package-dir]
"" = "skills/image2slides/scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/image2slides/scripts"]
